# stem-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
stem/: __init__.py  agent.py  checkpoint.py  convergence.py  crystallizer.py  environment.py  evolution.py  llm.py  models.py  prompts.py  stem_agent.py  task_archaeologist.py
stem/envs/: __init__.py  registry.py
stem/envs/research/: __init__.py  env.py
stem/envs/security/: __init__.py  env.py  samples.py
stem/envs/trading/: __init__.py  env.py  exchange.py
stem/eval/: __init__.py  harness.py  mock_demo.py  run_eval.py
stem/tools/: __init__.py  builtin.py
tests/: test_agent_rollout.py  test_archaeology_phase.py  test_crystallization.py  test_environment.py  test_evolution.py  test_exchange.py  test_execution_evolution.py  test_harness.py  test_interview.py  test_llm.py  test_models.py  test_models_checkpoint.py
