[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0"]
dev       = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
stem = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["stem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
