[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-agent"
version = "0.2.0"
description = "A self-specializing agent that starts undifferentiated and grows into whatever a class of tasks requires."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
stem = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["stem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
